# Photosyntech

./: .gitignore  .gitmodules  1st Meeting Decisions.md  Ansi-color-codes.h  CMakeLists.txt  Doxyfile  Implementation ideas.md  Meeting Notes.md  Photosyntech Plant Nursery Simulator - Design Document.md  PhotosyntechDemoMain.cpp  README.md  TODO.md  debug_log.txt  facade-command-unit-tests.cpp  facadeSpec.txt  make  makefile  photosyntech.tag  plant_growth_sim  unitTests.cpp
DearImGui/: CMakeLists.txt  README.md  imgui_example  main.cpp
OldDocs/: climate_zones_detailed_tree.mermaid  commercial_categories_tree.mermaid  compass_artifact_wf-cd7e4b06-1cee-44ec-adaf-336555acc902_text_markdown.md  conservation_status_tree.mermaid  cpp_gui_libraries_guide.md  design_patterns_brainstorm.md  endemic_plant_families_tree.mermaid  growth_patterns_maturity_tree.mermaid  plant_size_categories_tree.mermaid  propagation_methods_tree.mermaid  recommended_patterns_report.md  sa_plant_categorization_trees.md  seasonal_patterns_tree.mermaid  water_requirements_tree.mermaid
OldDocs/GTK_gtkmm/: CMakeLists.txt  README.md  main.cpp
OldDocs/Qt/: CMakeLists.txt  README.md  main.cpp
OldDocs/wxWidgets/: CMakeLists.txt  README.md  main.cpp
TUI_files/: CMakeLists.txt  CompositeFixes.cpp  LatestTUI.cpp  MergedTUI.cpp  StructureTUI.cpp  TUI.cpp  UpdatedTUI.cpp  WilmarTUI.cpp
builder/: Builder.cpp  Builder.h  CactusBuilder.cpp  CactusBuilder.h  CherryBlossomBuilder.cpp  CherryBlossomBuilder.h  Director.cpp  Director.h  JadePlantBuilder.cpp  JadePlantBuilder.h  LavenderBuilder.cpp  LavenderBuilder.h  MapleBuilder.cpp  MapleBuilder.h  PineBuilder.cpp  PineBuilder.h  Plant3Builder.h  PlantLayouts.md  RoseBuilder.cpp  RoseBuilder.h  SunflowerBuilder.cpp  SunflowerBuilder.h  TemplatePlantBuilder.h  TemplatePlantBuilder.hpp
command/: AddPlantToBasketCommand.cpp  AddPlantToBasketCommand.h  AddToInventoryCommand.cpp  AddToInventoryCommand.h  BrowsePlantsCommand.cpp  BrowsePlantsCommand.h  Command.h  CreatePlantCommand.cpp  CreatePlantCommand.h  GetSuggestionCommand.cpp  GetSuggestionCommand.h  GrowPlantCommand.cpp  GrowPlantCommand.h  PurchasePlantCommand.cpp  PurchasePlantCommand.h  PurchasePlantsCommand.cpp  PurchasePlantsCommand.h  WaterPlantCommand.cpp  WaterPlantCommand.h
composite/: PlantComponent.cpp  PlantComponent.h  PlantGroup.cpp  PlantGroup.h
decorator/: ConcreteDecorators.cpp  PlantAttributes.cpp  PlantAttributes.h
docs/: ARCHITECTURE.md  DOXYGEN_ENHANCEMENT_TRACKER.md  ITERATOR_REFACTOR_PLAN.md  PATTERN_MAPPING.md  commandImplementationChallenges.md  doxygen-custom.css  facade-command-unit-tests-spec.md
facade/: NurseryFacade.cpp  NurseryFacade.h
ff/: PlantGrowthSimulationMain.cpp
flyweight/: Flyweight.cpp  Flyweight.h  FlyweightFactory.cpp  FlyweightFactory.h
gui/: DemoMain.cpp  GUI.h
iterator/: AggAutumn.cpp  AggAutumn.h  AggPlant.cpp  AggPlant.h  AggPlantName.cpp  AggPlantName.h  AggSeason.cpp  AggSeason.h  AggSpring.cpp  AggSpring.h  AggSummer.cpp  AggSummer.h  AggWinter.cpp  AggWinter.h  Aggregate.cpp  Aggregate.h  AutumnIterator.cpp  AutumnIterator.h  Iterator.h  PlantIterator.cpp  PlantIterator.h  PlantNameIterator.cpp  PlantNameIterator.h  SeasonIterator.cpp  SeasonIterator.h  SpringIterator.cpp  SpringIterator.h  StackFrame.h  SummerIterator.cpp  SummerIterator.h  WinterIterator.cpp  WinterIterator.h
mediator/: BasketMemento.cpp  BasketMemento.h  Customer.cpp  Customer.h  Mediator.cpp  Mediator.h  SalesFloor.cpp  SalesFloor.h  Staff.cpp  (+4 more)
(+104 files in other folders)
